// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentItemsModel filters by content channel id 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28ContentChannelId%20eq%201%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29&%24orderby=StartDateTime%20desc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel filters by content channel id 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel getSermonFeed fetches items from a specific content channel 1`] = `
Array [
  Array [
    "TEST_ID",
  ],
]
`;

exports[`ContentItemsModel getSermonFeed fetches items from a specific content channel 2`] = `Promise {}`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%201",
    Object {},
    Object {},
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20101%29%20or%20%28Id%20eq%20201%29%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {},
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20101%29%20or%20%28Id%20eq%20201%29%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {},
  ],
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=%28%28ContentChannelItemId%20eq%20101%29%20and%20%28ChildContentChannelItemId%20ne%201%29%29",
    Object {},
    Object {},
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets by id 1`] = `
Array [
  Array [
    "ContentChannelItems/1?loadAttributes=expanded",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets by id 2`] = `
Object {
  "id": 1,
}
`;

exports[`ContentItemsModel gets by ids 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets by ids 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel isContentActiveLiveStream returns false if the livestream is innactive 1`] = `Array []`;

exports[`ContentItemsModel isContentActiveLiveStream returns false if the livestream is not the most recent sermon 1`] = `
Array [
  Array [],
]
`;

exports[`ContentItemsModel isContentActiveLiveStream returns true if the livestream is the most recent sermon 1`] = `
Array [
  Array [],
]
`;

exports[`ContentItemsModel returns a text feature when a contentItem has a TextFeature field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns a text feature when a contentItem has a TextFeature field 2`] = `
Array [
  Array [
    Object {
      "id": 123,
      "text": "something",
    },
  ],
]
`;

exports[`ContentItemsModel returns an empty array when there are no features 1`] = `Array []`;

exports[`ContentItemsModel returns an empty array when there are no features 2`] = `Array []`;

exports[`ContentItemsModel returns null when there are no child content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%201",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel returns null when there are no parent content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {},
  ],
]
`;
